# PBIS

./: .env  .env.example  .gitignore  README.md  manage.py  package-lock.json  package.json  pyproject.toml
PBIS/: .settings.py.swp  asgi.py  error_responses.py  middleware.py  settings.py  urls.py  wsgi.py
PBIS/templates/frontend/: index.html
brand/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
counts/: admin.py  apps.py  models.py  pagination.py  serializers.py  signals.py  tests.py  urls.py  utils.py  validators.py  views.py
counts/migrations/: 0001_initial.py  0002_initial.py
frequency/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
frequency/migrations/: 0001_initial.py
frontend/: .env  index.html  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js  vitest.config.js
frontend/src/: App.jsx  AppRoutes.jsx  index.css  index.js  main.jsx
frontend/src/__tests__/: utils.test.js
frontend/src/api/: axiosConfig.js  baseAPI.js  index.js  uiSlice.js
frontend/src/components/: AppLoading.jsx  ColorBadge.jsx  CountRow.jsx  EmptyState.jsx  ErrorDisplay.jsx  Footer.jsx  FormSelect.jsx  Header.jsx  LoadingSpinner.jsx  (+8 more)
inventory/: admin.py  admin_clean.py  apps.py  models.py  models_original.py  serializers.py  serializers_clean.py  urls.py  urls_clean.py  views.py  views_clean.py
inventory/migrations/: 0001_initial.py
locations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
locations/migrations/: 0001_initial.py
reports/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
reports/migrations/: 0001_initial.py  0002_initial.py
staticfiles/assets/: index-Dfqirhp3.js
tools/: find_unused_imports.py
users/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
(+104 files in other folders)
